@@ -10,6 +10,7 @@ import org.springframework.transaction.annotation.Transactional;
 import se.vestige_be.dto.request.ProductImageRequest;
 import se.vestige_be.dto.request.ProductCreateRequest;
 import se.vestige_be.dto.request.ProductUpdateRequest;
+import se.vestige_be.dto.response.PagedResponse;
 import se.vestige_be.dto.response.ProductDetailResponse;
 import se.vestige_be.dto.response.ProductFilterResponse;
 import se.vestige_be.dto.response.ProductListResponse;
@@ -21,13 +22,18 @@ import se.vestige_be.pojo.enums.ProductCondition;
 import se.vestige_be.pojo.enums.ProductStatus;
 import se.vestige_be.repository.BrandRepository;
 import se.vestige_be.repository.CategoryRepository;
+import se.vestige_be.repository.ProductImageRepository;
 import se.vestige_be.repository.ProductRepository;
 import se.vestige_be.repository.UserRepository;
+import se.vestige_be.util.PaginationUtils;
 
 import java.math.BigDecimal;
 import java.math.RoundingMode;
+import java.time.LocalDateTime;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 @Service
@@ -39,11 +45,78 @@ public class ProductService {
     private final UserRepository userRepository;
     private final CategoryRepository categoryRepository;
     private final BrandRepository brandRepository;
+    private final ProductImageRepository productImageRepository;
 
     public Page<ProductListResponse> getProducts(ProductFilterResponse filterDto, Pageable pageable) {
         Specification<Product> spec = buildProductSpecification(filterDto);
         Page<Product> products = productRepository.findAll(spec, pageable);
         return products.map(this::convertToListResponse);
+    }
+
+    public PagedResponse<ProductListResponse> getAllProductsWithAnyStatus(
+            int page, int size, String sortBy, String sortDir,
+            String search, Long categoryId, Long brandId,
+            BigDecimal minPrice, BigDecimal maxPrice,
+            String condition, String status, Long sellerId) {
+
+        Pageable pageable = PaginationUtils.createPageable(page, size, sortBy, sortDir);
+
+        ProductFilterResponse filterDto = ProductFilterResponse.builder()
+                .search(search)
+                .categoryId(categoryId)
+                .brandId(brandId)
+                .minPrice(minPrice)
+                .maxPrice(maxPrice)
+                .condition(condition)
+                .status(status)
+                .sellerId(sellerId)
+                .build();
+
+        Specification<Product> spec = buildAdminProductSpecification(filterDto);
+        Page<Product> products = productRepository.findAll(spec, pageable);
+
+        return PagedResponse.of(products.map(this::convertToListResponse));
+    }
+    private Specification<Product> buildAdminProductSpecification(ProductFilterResponse filterDto) {
+        Specification<Product> spec = Specification.where(null);
+
+        if (filterDto.getSearch() != null && !filterDto.getSearch().trim().isEmpty()) {
+            spec = spec.and(hasSearch(filterDto.getSearch()));
+        }
+        if (filterDto.getCategoryId() != null) {
+            spec = spec.and(hasCategoryId(filterDto.getCategoryId()));
+        }
+        if (filterDto.getBrandId() != null) {
+            spec = spec.and(hasBrandId(filterDto.getBrandId()));
+        }
+        if (filterDto.getMinPrice() != null || filterDto.getMaxPrice() != null) {
+            spec = spec.and(hasPriceRange(filterDto.getMinPrice(), filterDto.getMaxPrice()));
+        }
+        if (filterDto.getCondition() != null && !filterDto.getCondition().trim().isEmpty()) {
+            spec = spec.and(hasCondition(filterDto.getCondition()));
+        }
+        if (filterDto.getSellerId() != null) {
+            spec = spec.and(hasSellerId(filterDto.getSellerId()));
+        }
+
+        if (filterDto.getStatus() != null && !filterDto.getStatus().trim().isEmpty()) {
+            spec = spec.and(hasStatusForAdmin(filterDto.getStatus()));
+        }
+
+        return spec;
+    }
+    private Specification<Product> hasStatusForAdmin(String statusString) {
+        return (root, query, criteriaBuilder) -> {
+            if (statusString == null || statusString.trim().isEmpty()) {
+                return null;
+            }
+            try {
+                ProductStatus status = ProductStatus.valueOf(statusString.toUpperCase());
+                return criteriaBuilder.equal(root.get("status"), status);
+            } catch (IllegalArgumentException e) {
+                return null;
+            }
+        };
     }
 
     public Optional<ProductDetailResponse> getProductById(Long productId) {
@@ -54,21 +127,17 @@ public class ProductService {
     @Transactional
     public ProductDetailResponse createProduct(ProductCreateRequest request, Long sellerId) {
         User seller = userRepository.findById(sellerId)
-                .orElseThrow(() -> new RuntimeException("Seller not found"));
+                .orElseThrow(() -> new ResourceNotFoundException("Seller not found with ID: " + sellerId));
 
         Category category = categoryRepository.findById(request.getCategoryId())
-                .orElseThrow(() -> new RuntimeException("Category not found"));
+                .orElseThrow(() -> new ResourceNotFoundException("Category not found with ID: " + request.getCategoryId()));
 
         Brand brand = brandRepository.findById(request.getBrandId())
-                .orElseThrow(() -> new RuntimeException("Brand not found"));
+                .orElseThrow(() -> new ResourceNotFoundException("Brand not found with ID: " + request.getBrandId()));
 
-        if (productRepository.existsBySellerUserIdAndTitle(sellerId, request.getTitle())) {
-            throw new RuntimeException("Product with this title already exists for this seller");
-        }
-
-        if (request.getOriginalPrice() != null &&
+        if (request.getOriginalPrice() != null && request.getPrice() != null &&
                 request.getOriginalPrice().compareTo(request.getPrice()) < 0) {
-            throw new RuntimeException("Original price must be greater than or equal to current price");
+            throw new BusinessLogicException("Original price must be greater than or equal to current price.");
         }
 
         Product product = Product.builder()
@@ -94,6 +163,7 @@ public class ProductService {
                             .imageUrl(request.getImageUrls().get(i))
                             .isPrimary(i == 0)
                             .displayOrder(i + 1)
+                            .active(true)
                             .build())
                     .toList();
             product.getImages().addAll(images);
@@ -106,83 +176,62 @@ public class ProductService {
     @Transactional
     public ProductDetailResponse updateProduct(Long productId, ProductUpdateRequest request, Long sellerId) {
         Product product = productRepository.findById(productId)
-                .orElseThrow(() -> new ResourceNotFoundException("Product not found"));
+                .orElseThrow(() -> new ResourceNotFoundException("Product not found with ID: " + productId));
 
         if (!product.getSeller().getUserId().equals(sellerId)) {
-            throw new UnauthorizedException("You can only update your own products");
+            throw new UnauthorizedException("You are not authorized to update this product.");
         }
 
         if (ProductStatus.SOLD.equals(product.getStatus())) {
-            throw new UnauthorizedException("Cannot update sold products");
+            throw new BusinessLogicException("Cannot update a product that has been sold.");
         }
 
-        if (request.hasCategoryId()) {
-            if (!product.getCategory().getCategoryId().equals(request.getCategoryId())) {
-                Category category = categoryRepository.findById(request.getCategoryId())
-                        .orElseThrow(() -> new ResourceNotFoundException("Category not found"));
-                product.setCategory(category);
-            }
+        if (request.hasCategoryId() && !product.getCategory().getCategoryId().equals(request.getCategoryId())) {
+            Category category = categoryRepository.findById(request.getCategoryId())
+                    .orElseThrow(() -> new ResourceNotFoundException("Category not found with ID: " + request.getCategoryId()));
+            product.setCategory(category);
         }
 
-        if (request.hasBrandId()) {
-            if (!product.getBrand().getBrandId().equals(request.getBrandId())) {
-                Brand brand = brandRepository.findById(request.getBrandId())
-                        .orElseThrow(() -> new ResourceNotFoundException("Brand not found"));
-                product.setBrand(brand);
-            }
+        if (request.hasBrandId() && !product.getBrand().getBrandId().equals(request.getBrandId())) {
+            Brand brand = brandRepository.findById(request.getBrandId())
+                    .orElseThrow(() -> new ResourceNotFoundException("Brand not found with ID: " + request.getBrandId()));
+            product.setBrand(brand);
         }
 
         if (request.hasTitle()) {
             if (!product.getTitle().equals(request.getTitle()) &&
-                    productRepository.existsBySellerUserIdAndTitle(sellerId, request.getTitle())) {
-                throw new RuntimeException("Product with this title already exists for this seller");
+                    productRepository.existsBySellerUserIdAndTitleAndProductIdNot(sellerId, request.getTitle(), productId)) { // Check for other products
+                throw new BusinessLogicException("Another product with this title already exists for this seller.");
             }
             product.setTitle(request.getTitle());
         }
 
-        if (request.hasDescription()) {
-            product.setDescription(request.getDescription());
-        }
+        if (request.hasDescription()) product.setDescription(request.getDescription());
+        if (request.hasCondition()) product.setCondition(request.getCondition());
+        if (request.hasSize()) product.setSize(request.getSize());
+        if (request.hasColor()) product.setColor(request.getColor());
+        if (request.hasStatus()) product.setStatus(request.getStatus());
+
 
         if (request.hasPrice()) {
-            BigDecimal originalPriceToCheck = request.hasOriginalPrice() ?
-                    request.getOriginalPrice() : product.getOriginalPrice();
-
-            if (originalPriceToCheck != null &&
-                    originalPriceToCheck.compareTo(request.getPrice()) < 0) {
-                throw new BusinessLogicException("Original price must be greater than or equal to current price");
+            BigDecimal originalPriceToCheck = request.hasOriginalPrice() ? request.getOriginalPrice() : product.getOriginalPrice();
+            if (originalPriceToCheck != null && originalPriceToCheck.compareTo(request.getPrice()) < 0) {
+                throw new BusinessLogicException("Original price must be greater than or equal to current price.");
             }
             product.setPrice(request.getPrice());
         }
 
         if (request.hasOriginalPrice()) {
-            BigDecimal currentPriceToCheck = request.hasPrice() ?
-                    request.getPrice() : product.getPrice();
-
-            if (request.getOriginalPrice().compareTo(currentPriceToCheck) < 0) {
-                throw new BusinessLogicException("Original price must be greater than or equal to current price");
+            BigDecimal currentPriceToCheck = request.hasPrice() ? request.getPrice() : product.getPrice();
+            if (currentPriceToCheck != null && request.getOriginalPrice().compareTo(currentPriceToCheck) < 0) {
+                throw new BusinessLogicException("Original price must be greater than or equal to current price.");
             }
             product.setOriginalPrice(request.getOriginalPrice());
         }
 
-        if (request.hasCondition()) {
-            product.setCondition(request.getCondition());
-        }
-
-        if (request.hasSize()) {
-            product.setSize(request.getSize());
-        }
-
-        if (request.hasColor()) {
-            product.setColor(request.getColor());
-        }
-
-        if (request.hasStatus()) {
-            product.setStatus(request.getStatus());
-        }
-
         if (request.hasImageUrls()) {
             product.getImages().clear();
+            productImageRepository.deleteAll(product.getImages());
 
             List<ProductImage> newImages = IntStream.range(0, request.getImageUrls().size())
                     .mapToObj(i -> ProductImage.builder()
@@ -190,9 +239,9 @@ public class ProductService {
                             .imageUrl(request.getImageUrls().get(i))
                             .isPrimary(i == 0)
                             .displayOrder(i + 1)
+                            .active(true)
                             .build())
                     .toList();
-
             product.getImages().addAll(newImages);
         }
 
@@ -203,63 +252,122 @@ public class ProductService {
     @Transactional
     public void deleteProduct(Long productId, Long sellerId) {
         Product product = productRepository.findById(productId)
-                .orElseThrow(() -> new RuntimeException("Product not found"));
+                .orElseThrow(() -> new ResourceNotFoundException("Product not found with ID: " + productId));
 
         if (!product.getSeller().getUserId().equals(sellerId)) {
-            throw new RuntimeException("You can only delete your own products");
+            throw new UnauthorizedException("You are not authorized to delete this product.");
         }
 
         if (ProductStatus.SOLD.equals(product.getStatus())) {
-            throw new RuntimeException("Cannot delete sold products");
+            throw new BusinessLogicException("Cannot delete a product that has been sold.");
         }
 
         product.setStatus(ProductStatus.DELETED);
+        product.setUpdatedAt(LocalDateTime.now());
         productRepository.save(product);
     }
 
     @Transactional
-    public ProductDetailResponse addProductImage(Long productId, ProductImageRequest request, Long sellerId) {
+    public ProductDetailResponse manageProductImage(Long productId, ProductImageRequest request, Long sellerId) {
         Product product = productRepository.findById(productId)
-                .orElseThrow(() -> new RuntimeException("Product not found"));
+                .orElseThrow(() -> new ResourceNotFoundException("Product not found with ID: " + productId));
 
         if (!product.getSeller().getUserId().equals(sellerId)) {
-            throw new RuntimeException("You can only modify your own products");
+            throw new UnauthorizedException("You are not authorized to modify images for this product.");
         }
 
-        if (request.getIsPrimary()) {
-            product.getImages().forEach(img -> img.setIsPrimary(false));
+        if (request.getImageId() != null) {
+            ProductImage imageToUpdate = product.getImages().stream()
+                    .filter(img -> img.getImageId().equals(request.getImageId()))
+                    .findFirst()
+                    .orElseThrow(() -> new ResourceNotFoundException("Image not found with ID: " + request.getImageId() + " for this product."));
+
+            boolean modified = false;
+
+            if (request.getActive() != null && !request.getActive().equals(imageToUpdate.getActive())) {
+                imageToUpdate.setActive(request.getActive());
+                modified = true;
+                if (!request.getActive()) {
+                    if (Boolean.TRUE.equals(imageToUpdate.getIsPrimary())) {
+                        imageToUpdate.setIsPrimary(false);
+                        Optional<ProductImage> nextPrimary = product.getImages().stream()
+                                .filter(img -> !img.getImageId().equals(imageToUpdate.getImageId()) && Boolean.TRUE.equals(img.getActive()))
+                                .min(Comparator.comparingInt(ProductImage::getDisplayOrder));
+                        nextPrimary.ifPresent(img -> img.setIsPrimary(true));
+                    }
+                }
+            }
+
+            // Handle primary status change
+            if (request.getIsPrimary() != null && !request.getIsPrimary().equals(imageToUpdate.getIsPrimary())) {
+                if (request.getIsPrimary()) {
+                    if (!Boolean.TRUE.equals(imageToUpdate.getActive())) {
+                        throw new BusinessLogicException("Cannot set an inactive image as primary.");
+                    }
+                    product.getImages().forEach(img -> {
+                        if (!img.getImageId().equals(imageToUpdate.getImageId())) {
+                            img.setIsPrimary(false);
+                        }
+                    });
+                    imageToUpdate.setIsPrimary(true);
+                } else {
+                    imageToUpdate.setIsPrimary(false);
+                    if (product.getImages().stream().noneMatch(img -> Boolean.TRUE.equals(img.getIsPrimary()) && Boolean.TRUE.equals(img.getActive()) && !img.getImageId().equals(imageToUpdate.getImageId()))) {
+                        product.getImages().stream()
+                                .filter(img -> Boolean.TRUE.equals(img.getActive()) && !img.getImageId().equals(imageToUpdate.getImageId()))
+                                .min(Comparator.comparingInt(ProductImage::getDisplayOrder))
+                                .ifPresent(img -> img.setIsPrimary(true));
+                    }
+                }
+                modified = true;
+            }
+            if (request.getDisplayOrder() != null && !request.getDisplayOrder().equals(imageToUpdate.getDisplayOrder())) {
+                imageToUpdate.setDisplayOrder(request.getDisplayOrder());
+                modified = true;
+            }
+
+            if (request.getImageUrl() != null && !request.getImageUrl().isBlank() && !imageToUpdate.getImageUrl().equals(request.getImageUrl())) {
+                imageToUpdate.setImageUrl(request.getImageUrl());
+                modified = true;
+            }
+
+            if (modified) {
+                productImageRepository.save(imageToUpdate);
+            }
+
+        } else {
+            if (request.getImageUrl() == null || request.getImageUrl().isBlank()) {
+                throw new BusinessLogicException("Image URL is required for adding a new image.");
+            }
+            if (request.getDisplayOrder() == null) {
+                throw new BusinessLogicException("Display order is required for adding a new image.");
+            }
+
+            if (Boolean.TRUE.equals(request.getIsPrimary())) {
+                product.getImages().forEach(img -> img.setIsPrimary(false));
+            }
+
+            ProductImage newImage = ProductImage.builder()
+                    .product(product)
+                    .imageUrl(request.getImageUrl())
+                    .isPrimary(request.getIsPrimary() != null ? request.getIsPrimary() : false)
+                    .displayOrder(request.getDisplayOrder())
+                    .active(request.getActive() != null ? request.getActive() : true)
+                    .build();
+            product.getImages().add(newImage);
+
+            if (product.getImages().stream().filter(img -> Boolean.TRUE.equals(img.getActive())).noneMatch(ProductImage::getIsPrimary)) {
+                product.getImages().stream()
+                        .filter(img -> Boolean.TRUE.equals(img.getActive()))
+                        .min(Comparator.comparingInt(ProductImage::getDisplayOrder))
+                        .ifPresent(img -> img.setIsPrimary(true));
+            }
         }
 
-        int targetDisplayOrder = request.getDisplayOrder();
-
-        product.getImages().stream()
-                .filter(img -> img.getDisplayOrder() >= targetDisplayOrder)
-                .forEach(img -> img.setDisplayOrder(img.getDisplayOrder() + 1));
-
-        ProductImage image = ProductImage.builder()
-                .product(product)
-                .imageUrl(request.getImageUrl())
-                .isPrimary(request.getIsPrimary())
-                .displayOrder(targetDisplayOrder)
-                .build();
-
-        product.getImages().add(image);
         Product savedProduct = productRepository.save(product);
         return convertToDetailResponse(savedProduct);
     }
 
-    @Transactional
-    public void deleteProductImage(Long productId, Long imageId, Long sellerId) {
-        Product product = productRepository.findById(productId)
-                .orElseThrow(() -> new ResourceNotFoundException("Product not found"));
-
-        if (!product.getSeller().getUserId().equals(sellerId)) {
-            throw new BusinessLogicException("You can only modify your own products");
-        }
-
-        product.getImages().removeIf(img -> img.getImageId().equals(imageId));
-        productRepository.save(product);
-    }
 
     @Transactional
     public void incrementViewCount(Long productId) {
@@ -270,25 +378,32 @@ public class ProductService {
     }
 
     private Specification<Product> buildProductSpecification(ProductFilterResponse filterDto) {
-        return Specification.where(hasStatus(filterDto.getStatus()))
-                .and(hasSearch(filterDto.getSearch()))
-                .and(hasCategoryId(filterDto.getCategoryId()))
-                .and(hasBrandId(filterDto.getBrandId()))
-                .and(hasPriceRange(filterDto.getMinPrice(), filterDto.getMaxPrice()))
-                .and(hasCondition(filterDto.getCondition()))
-                .and(hasSellerId(filterDto.getSellerId()));
+        Specification<Product> spec = Specification.where(hasStatus(filterDto.getStatus() != null ? filterDto.getStatus() : ProductStatus.ACTIVE.name()));
+
+        if (filterDto.getSearch() != null) spec = spec.and(hasSearch(filterDto.getSearch()));
+        if (filterDto.getCategoryId() != null) spec = spec.and(hasCategoryId(filterDto.getCategoryId()));
+        if (filterDto.getBrandId() != null) spec = spec.and(hasBrandId(filterDto.getBrandId()));
+        if (filterDto.getMinPrice() != null || filterDto.getMaxPrice() != null) spec = spec.and(hasPriceRange(filterDto.getMinPrice(), filterDto.getMaxPrice()));
+        if (filterDto.getCondition() != null) spec = spec.and(hasCondition(filterDto.getCondition()));
+        if (filterDto.getSellerId() != null) spec = spec.and(hasSellerId(filterDto.getSellerId()));
+
+        if (filterDto.getStatus() == null || !ProductStatus.DELETED.name().equalsIgnoreCase(filterDto.getStatus())) {
+            spec = spec.and((root, query, cb) -> cb.notEqual(root.get("status"), ProductStatus.DELETED));
+        }
+
+
+        return spec;
     }
 
     private Specification<Product> hasSearch(String search) {
         return (root, query, criteriaBuilder) -> {
-            if (search == null || search.trim().isEmpty()) {
-                return null;
-            }
+            if (search == null || search.trim().isEmpty()) return null;
             String likePattern = "%" + search.toLowerCase() + "%";
             return criteriaBuilder.or(
                     criteriaBuilder.like(criteriaBuilder.lower(root.get("title")), likePattern),
                     criteriaBuilder.like(criteriaBuilder.lower(root.get("description")), likePattern),
-                    criteriaBuilder.like(criteriaBuilder.lower(root.get("brand").get("name")), likePattern)
+                    criteriaBuilder.like(criteriaBuilder.lower(root.get("brand").get("name")), likePattern),
+                    criteriaBuilder.like(criteriaBuilder.lower(root.get("category").get("name")), likePattern)
             );
         };
     }
@@ -297,57 +412,50 @@ public class ProductService {
         return (root, query, criteriaBuilder) -> {
             Predicate predicate = criteriaBuilder.conjunction();
             if (minPrice != null) {
-                predicate = criteriaBuilder.and(predicate,
-                        criteriaBuilder.greaterThanOrEqualTo(root.get("price"), minPrice));
+                predicate = criteriaBuilder.and(predicate, criteriaBuilder.greaterThanOrEqualTo(root.get("price"), minPrice));
             }
             if (maxPrice != null) {
-                predicate = criteriaBuilder.and(predicate,
-                        criteriaBuilder.lessThanOrEqualTo(root.get("price"), maxPrice));
+                predicate = criteriaBuilder.and(predicate, criteriaBuilder.lessThanOrEqualTo(root.get("price"), maxPrice));
             }
             return predicate.getExpressions().isEmpty() ? null : predicate;
         };
     }
 
-    private Specification<Product> hasStatus(String status) {
+    private Specification<Product> hasStatus(String statusString) {
         return (root, query, criteriaBuilder) -> {
-            if (status == null || status.isEmpty()) {
-                return criteriaBuilder.equal(root.get("status"), ProductStatus.ACTIVE);
+            if (statusString == null || statusString.trim().isEmpty()) {
+                return criteriaBuilder.and(
+                        criteriaBuilder.equal(root.get("status"), ProductStatus.ACTIVE),
+                        criteriaBuilder.notEqual(root.get("status"), ProductStatus.DELETED)
+                );
             }
             try {
-                ProductStatus productStatus = ProductStatus.valueOf(status.toUpperCase());
-                return criteriaBuilder.equal(root.get("status"), productStatus);
+                ProductStatus status = ProductStatus.valueOf(statusString.toUpperCase());
+                return criteriaBuilder.equal(root.get("status"), status);
             } catch (IllegalArgumentException e) {
-                return criteriaBuilder.equal(root.get("status"), ProductStatus.ACTIVE);
+                return criteriaBuilder.and(
+                        criteriaBuilder.equal(root.get("status"), ProductStatus.ACTIVE),
+                        criteriaBuilder.notEqual(root.get("status"), ProductStatus.DELETED)
+                );
             }
         };
     }
 
+
     private Specification<Product> hasCategoryId(Long categoryId) {
-        return (root, query, criteriaBuilder) -> {
-            if (categoryId == null) {
-                return null;
-            }
-            return criteriaBuilder.equal(root.get("category").get("categoryId"), categoryId);
-        };
+        return (root, query, criteriaBuilder) -> categoryId == null ? null : criteriaBuilder.equal(root.get("category").get("categoryId"), categoryId);
     }
 
     private Specification<Product> hasBrandId(Long brandId) {
-        return (root, query, criteriaBuilder) -> {
-            if (brandId == null) {
-                return null;
-            }
-            return criteriaBuilder.equal(root.get("brand").get("brandId"), brandId);
-        };
+        return (root, query, criteriaBuilder) -> brandId == null ? null : criteriaBuilder.equal(root.get("brand").get("brandId"), brandId);
     }
 
-    private Specification<Product> hasCondition(String condition) {
+    private Specification<Product> hasCondition(String conditionStr) {
         return (root, query, criteriaBuilder) -> {
-            if (condition == null || condition.isEmpty()) {
-                return null;
-            }
+            if (conditionStr == null || conditionStr.trim().isEmpty()) return null;
             try {
-                ProductCondition productCondition = ProductCondition.valueOf(condition.toUpperCase());
-                return criteriaBuilder.equal(root.get("condition"), productCondition);
+                ProductCondition condition = ProductCondition.valueOf(conditionStr.toUpperCase());
+                return criteriaBuilder.equal(root.get("condition"), condition);
             } catch (IllegalArgumentException e) {
                 return null;
             }
@@ -355,34 +463,30 @@ public class ProductService {
     }
 
     private Specification<Product> hasSellerId(Long sellerId) {
-        return (root, query, criteriaBuilder) -> {
-            if (sellerId == null) {
-                return null;
-            }
-            return criteriaBuilder.equal(root.get("seller").get("userId"), sellerId);
-        };
+        return (root, query, criteriaBuilder) -> sellerId == null ? null : criteriaBuilder.equal(root.get("seller").get("userId"), sellerId);
     }
 
+
     private ProductListResponse convertToListResponse(Product product) {
-        String primaryImageUrl = null;
-        if (product.getImages() != null && !product.getImages().isEmpty()) {
-            primaryImageUrl = product.getImages().stream()
-                    .filter(ProductImage::getIsPrimary)
-                    .map(ProductImage::getImageUrl)
-                    .findFirst()
-                    .orElse(product.getImages().getFirst().getImageUrl());
-        }
+        String primaryImageUrl = product.getImages().stream()
+                .filter(img -> Boolean.TRUE.equals(img.getActive()) && Boolean.TRUE.equals(img.getIsPrimary()))
+                .map(ProductImage::getImageUrl)
+                .findFirst()
+                .orElse(product.getImages().stream()
+                        .filter(img -> Boolean.TRUE.equals(img.getActive()))
+                        .min(Comparator.comparingInt(ProductImage::getDisplayOrder))
+                        .map(ProductImage::getImageUrl)
+                        .orElse(null));
 
         BigDecimal discountPercentage = null;
         boolean hasDiscount = false;
-
-        if (product.getOriginalPrice() != null &&
+        if (product.getOriginalPrice() != null && product.getPrice() != null &&
+                product.getOriginalPrice().compareTo(BigDecimal.ZERO) > 0 && // Avoid division by zero
                 product.getOriginalPrice().compareTo(product.getPrice()) > 0) {
             hasDiscount = true;
-            discountPercentage = product.getOriginalPrice()
-                    .subtract(product.getPrice())
-                    .divide(product.getOriginalPrice(), 4, RoundingMode.HALF_UP)
-                    .multiply(BigDecimal.valueOf(100));
+            discountPercentage = product.getOriginalPrice().subtract(product.getPrice())
+                    .multiply(BigDecimal.valueOf(100))
+                    .divide(product.getOriginalPrice(), 2, RoundingMode.HALF_UP);
         }
 
         return ProductListResponse.builder()
@@ -391,17 +495,17 @@ public class ProductService {
                 .description(product.getDescription())
                 .price(product.getPrice())
                 .originalPrice(product.getOriginalPrice())
-                .condition(product.getCondition().name())
+                .condition(product.getCondition() != null ? product.getCondition().name() : null)
                 .size(product.getSize())
                 .color(product.getColor())
-                .status(product.getStatus().name())
+                .status(product.getStatus() != null ? product.getStatus().name() : null)
                 .viewsCount(product.getViewsCount())
                 .likesCount(product.getLikesCount())
                 .createdAt(product.getCreatedAt())
-                .categoryId(product.getCategory().getCategoryId())
-                .categoryName(product.getCategory().getName())
-                .brandId(product.getBrand().getBrandId())
-                .brandName(product.getBrand().getName())
+                .categoryId(product.getCategory() != null ? product.getCategory().getCategoryId() : null)
+                .categoryName(product.getCategory() != null ? product.getCategory().getName() : null)
+                .brandId(product.getBrand() != null ? product.getBrand().getBrandId() : null)
+                .brandName(product.getBrand() != null ? product.getBrand().getName() : null)
                 .primaryImageUrl(primaryImageUrl)
                 .discountPercentage(discountPercentage)
                 .hasDiscount(hasDiscount)
@@ -412,23 +516,26 @@ public class ProductService {
         BigDecimal discountPercentage = null;
         boolean hasDiscount = false;
 
-        if (product.getOriginalPrice() != null &&
+        if (product.getOriginalPrice() != null && product.getPrice() != null &&
+                product.getOriginalPrice().compareTo(BigDecimal.ZERO) > 0 &&
                 product.getOriginalPrice().compareTo(product.getPrice()) > 0) {
             hasDiscount = true;
-            discountPercentage = product.getOriginalPrice()
-                    .subtract(product.getPrice())
-                    .divide(product.getOriginalPrice(), 4, RoundingMode.HALF_UP)
-                    .multiply(BigDecimal.valueOf(100));
+            discountPercentage = product.getOriginalPrice().subtract(product.getPrice())
+                    .multiply(BigDecimal.valueOf(100))
+                    .divide(product.getOriginalPrice(), 2, RoundingMode.HALF_UP);
         }
 
         List<ProductDetailResponse.ProductImageInfo> images = product.getImages().stream()
+                .filter(img -> Boolean.TRUE.equals(img.getActive()))
+                .sorted(Comparator.comparingInt(ProductImage::getDisplayOrder))
                 .map(img -> ProductDetailResponse.ProductImageInfo.builder()
                         .imageId(img.getImageId())
                         .imageUrl(img.getImageUrl())
                         .isPrimary(img.getIsPrimary())
                         .displayOrder(img.getDisplayOrder())
+                        .active(img.getActive())
                         .build())
-                .toList();
+                .collect(Collectors.toList());
 
         return ProductDetailResponse.builder()
                 .productId(product.getProductId())
@@ -436,16 +543,16 @@ public class ProductService {
                 .description(product.getDescription())
                 .price(product.getPrice())
                 .originalPrice(product.getOriginalPrice())
-                .condition(product.getCondition().name())
+                .condition(product.getCondition() != null ? product.getCondition().name() : null)
                 .size(product.getSize())
                 .color(product.getColor())
                 .authenticityConfidenceScore(product.getAuthenticityConfidenceScore())
-                .status(product.getStatus().name())
+                .status(product.getStatus() != null ? product.getStatus().name() : null)
                 .viewsCount(product.getViewsCount())
                 .likesCount(product.getLikesCount())
                 .createdAt(product.getCreatedAt())
                 .updatedAt(product.getUpdatedAt())
-                .seller(ProductDetailResponse.SellerInfo.builder()
+                .seller(product.getSeller() != null ? ProductDetailResponse.SellerInfo.builder()
                         .userId(product.getSeller().getUserId())
                         .username(product.getSeller().getUsername())
                         .firstName(product.getSeller().getFirstName())
@@ -456,17 +563,17 @@ public class ProductService {
                         .sellerReviewsCount(product.getSeller().getSellerReviewsCount())
                         .successfulTransactions(product.getSeller().getSuccessfulTransactions())
                         .joinedDate(product.getSeller().getJoinedDate())
-                        .build())
-                .category(ProductDetailResponse.CategoryInfo.builder()
+                        .build() : null)
+                .category(product.getCategory() != null ? ProductDetailResponse.CategoryInfo.builder()
                         .categoryId(product.getCategory().getCategoryId())
                         .name(product.getCategory().getName())
                         .description(product.getCategory().getDescription())
-                        .build())
-                .brand(ProductDetailResponse.BrandInfo.builder()
+                        .build() : null)
+                .brand(product.getBrand() != null ? ProductDetailResponse.BrandInfo.builder()
                         .brandId(product.getBrand().getBrandId())
                         .name(product.getBrand().getName())
                         .logoUrl(product.getBrand().getLogoUrl())
-                        .build())
+                        .build() : null)
                 .images(images)
                 .discountPercentage(discountPercentage)
                 .hasDiscount(hasDiscount)
